--- a/src/app/components/social/social.component.css
+++ b/src/app/components/social/social.component.css
@@ -1,5 +1,6 @@
 img{
-    width: 30px;
-    margin-right: 3px;
-    margin-top: 24px;
+    filter: invert(100%) sepia(0%) saturate(7468%) hue-rotate(67deg) brightness(109%) contrast(109%);
+    width: 50px;
+    margin-right: 10px;
+    margin-top: 19px;
 }
