--- a/src/app/components/social/social.component.html
+++ b/src/app/components/social/social.component.html
@@ -1,8 +1,6 @@
 <div>
-    <a href=""><img src="../../../assets/logotipo-de-linkedin.png" alt=""></a>
-    <a href=""><img src="../../../assets/facebook.png" alt=""></a>
-    <a href=""><img src="../../../assets/signo-de-github.png" alt=""></a>
-    <a href=""><img src="../../../assets/signo-de-twitter.png" alt=""></a>
-    <a href=""><img src="../../../assets/whatsapp.png" alt=""></a>
-    <a href=""><img src="../../../assets/instagram.png" alt=""></a>
+    <a href="" target="_blank"><img src="../../../assets/whatsapp.png" alt=""></a>
+    <a href="https://www.linkedin.com/in/claudiogabrielalonso/" target="_blank"><img src="../../../assets/linkedin.png" alt=""></a>
+    <a href="" target="_blank"><img src="../../../assets/github.png" alt=""></a>
+    <a href="" target="_blank"><img src="../../../assets/twitter.png" alt=""></a>
 </div>
