--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,13 +1,13 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <div class="col-xs-2 col-sm-3 col-md-3 col-lg-2">
         <img src="../../../assets/perfil.jpg" 
-        class="img-fluid">
+        class="img-fluid" id="fotodeperfil">
     </div>
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2">
         <p>Alonso, Claudio Gabriel</p>
         <p>Full Stack Developer</p>
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+    <div class="col-xs-8 col-sm-6 col-md-6 col-lg-8">
         <span>
             <h1>Acerca de mí</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quae, laboriosam aliquam impedit laudantium explicabo corporis quas illum magni qui totam velit accusamus! Sequi perspiciatis est aspernatur qui, delectus eius.</p>
