--- a/src/app/components/acerca-de/acerca-de.component.css
+++ b/src/app/components/acerca-de/acerca-de.component.css
@@ -1,4 +1,24 @@
+.row{
+    padding: 20px;
+}
 div{
     color: white;
     background-color: #11141b;
+    text-align: center;
+}
+@media (max-width: 576px){
+    .row{
+        padding-top: 50px;
+    }
+    #fotodeperfil{
+        width: 40%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        margin-top: 280px;
+        position: absolute;
+        border-radius: 30%;
+    }
 }
