--- a/src/app/components/social/social.component.css
+++ b/src/app/components/social/social.component.css
@@ -1,6 +1,10 @@
 img{
-    filter: invert(100%) sepia(0%) saturate(7468%) hue-rotate(67deg) brightness(109%) contrast(109%);
+    filter: invert(100%) sepia(0%) saturate(7468%) hue-rotate(67deg) brightness(109%) contrast(109%); 
     width: 50px;
-    margin-right: 10px;
-    margin-top: 19px;
+    padding-top: 16px;
+    margin-right: 5px;
+}
+div{
+    float: right;
+    padding-right: 5px;
 }
