--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -3,14 +3,15 @@
         <img src="../../../assets/perfil.jpg" 
         class="img-fluid" id="fotodeperfil">
     </div>
-    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2">
+    <div class="col-xs-4 col-sm-3 col-md-3 col-lg-2 textoizquierda">
         <p>Alonso, Claudio Gabriel</p>
         <p>Full Stack Developer</p>
     </div>
-    <div class="col-xs-8 col-sm-6 col-md-6 col-lg-8">
+    <div class="col-xs-8 col-sm-6 col-md-6 col-lg-8 textojustificado">
         <span>
             <h1>Acerca de mí</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quae, laboriosam aliquam impedit laudantium explicabo corporis quas illum magni qui totam velit accusamus! Sequi perspiciatis est aspernatur qui, delectus eius.</p>
         </span>
     </div>
 </div>
+
